--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
   <h2 class="visually-hidden" >Галлерея</h2>
    <div class="container">
     <ul class="feature">
-      <li class="feature-item">
+      <li class="feature-feature__item">
        <div class="feature-pic">
         <svg  width="70" height="70">
          <use href="./images/sprite.svg#icon-antenna-1-1-1"></use>
         </svg>
     </div>
-    <h3 class="feature-title">Внимание к деталям</h3>
+    <h3 class="feature-feature__title">Внимание к деталям</h3>
     <p class="feature-text">
     Идейные соображения, а также начало повседневной работы по формированию позиции.
     </p>
