--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
   <nav class="header-items">
     <a lang="en" class="header-logo link" href="">Web<span class="header-logo-link">Studio</span></a>
     <ul class="header-list list">
-      <li class="header-list__item">
-        <a href="./index.html" class="header-list__link current">Студия</a>
+      <li class="list-item">
+        <a href="./index.html" class="list-link current">Студия</a>
       </li>
      
-      <li class="header-list__item">
-        <a  href ="./portfolio.html" class="header-list__link link">Портфолио</a>
+      <li class="list-item">
+        <a  href ="./portfolio.html" class="list-link link">Портфолио</a>
       </li>
      
-      <li class="header-list__item">
-        <a href="" class="header-list__link link">Контакты</a>
+      <li class="list-item">
+        <a href="" class="list-link link">Контакты</a>
       </li>
     </ul> 
   </nav>
    
    <ul class="contacs">
-      <li class="contacs-header__contacs">
-        <a class="contacs-mail__link link" href="mailto:info@devstudio.com"> 
+      <li class="header-contacs">
+        <a class="mail-link link" href="mailto:info@devstudio.com"> 
             <svg class=" mail-icon" width="16" height="12">
             <use href="./images/sprite.svg#icon-envelope-1-1"></use> 
            </svg>info@devstudio.com</a>
       </li>
-      <li class="contacs-header__contacs">
-        <a class="contacs-mail__link link" href="tel:+380961111111"> 
+      <li class="header-contacs">
+        <a class="mail-link link" href="tel:+380961111111"> 
          <svg class=" phone-icon" width="16" height="16">
             <use href="./images/sprite.svg#icon-phone"></use>
          </svg>+38 096 111 11 11</a>
