--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
            
           <!-- FOOTER-SOCIALS -->
          <div class="socials-footer">
-           <h3 class="socials-title">присоединяйтесь</h3>
+           <h3 class="socials-caption">присоединяйтесь</h3>
          
            <ul class="footer-socials list socials-list">
               <li class="social-item">
