--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           <div class=" container main-header">  
           <nav class="header-items">
           
-              <a lang="en" class="header-logo link" href="">Web<span class="header-logo-link">Studio</span></a>
+              <a lang="en" class="header-items__logo  link header-logo_color_light" href="">Web
+                <span class="header-items__logo header-logo_color_dark">Studio</span></a>
           
             <ul class="header-list ">
               <li class="header-list__item ">
@@ -471,8 +472,9 @@
           <div class=" container footer-content">
           <div class="footer-logo-studio">
             <div class="logo-studio">
-          <a lang="en" class="footer-logo link " href="">Web<span class="footer-logo-link">Studio</span></a>
-         </div>
+              <a lang="en" class="header-items__logo  link header-logo_size_n" href="">Web
+                <span class="header-items__logo header-logo_color_">Studio</span></a>
+          </div>
          <address>
           <ul class="footer-list">
             <li class="footer-list-footer__item">
