--- a/index.html
+++ b/index.html
@@ -482,10 +482,10 @@
                <a class="footer__adress" href="https://goo.gl/maps/Fyau3RTndr1kcrQs9"  target="_blank" rel ="noopener noreferren">г. Киев, пр-т Леси Украинки, 26</a>
              </li>
              <li class="footer__item">
-               <a  class="footer__link link" href="mailto:info@example.com">info@example.com</a>
+               <a  class="footer__link" href="mailto:info@example.com">info@example.com</a>
              </li>
              <li class="footer__item">
-               <a class="footer__link link"  href="tel:+380991111111">+38 099 111 11 11</a>
+               <a class="footer__link"  href="tel:+380991111111">+38 099 111 11 11</a>
              </li>
            </ul>
           </address>
@@ -563,52 +563,52 @@
        <div class="backdrop is-hidden" data-modal >
         <div class="modal">
           <button class="button-open" type="button" data-modal-close>
-            <svg class="modal-icon">
+            <svg class="modal__icon">
               <use href="./images/sprite.svg#icon-Vector-close"></use>
             </svg>
           </button>
           
           <form action="#" class="modal-form">
             <b class=" modal-form-modal__title">Оставьте свои данные, мы вам перезвоним</b>
-            <div class="modal-form-modal__form-field">
-              <label for="input-name" class="modal-form-label">Имя</label>
+            <div class="modal-form__field">
+              <label for="input-name" class="modal-form__label">Имя</label>
               <span class="input-wrap">
-              <input type="text" id="input-name" class="modal-form-input" placeholder=" ">
-              <svg class="modal-form-icon" width="18" height="18">
+              <input type="text" id="input-name" class="modal-form__input" placeholder=" ">
+              <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-person-black-18dp-1"></use>
               </svg>
             </span>
             </div>
 
-            <div class="modal-form-modal__form-field">
-              <label for="input-tel" class="modal-form-label">Телефон</label>
+            <div class="modal-form__field">
+              <label for="input-tel" class="modal-form__label">Телефон</label>
               <span class="input-wrap">
-              <input type="text" id="input-tel" class="modal-form-input" placeholder=" ">
-              <svg class="modal-form-icon" width="18" height="18">
+              <input type="text" id="input-tel" class="modal-form__input" placeholder=" ">
+              <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </span>
             </div>
 
-            <div class="modal-form-modal__form-field">
-              <label for="input-email" class="modal-form-label">Почта</label>
+            <div class="modal-form__field">
+              <label for="input-email" class="modal-form__label">Почта</label>
               <span class="input-wrap">
-              <input type="text" id="input-email" class="modal-form-input" placeholder=" ">
-              <svg class="modal-form-icon" width="18" height="18">
+              <input type="text" id="input-email" class="modal-form__input" placeholder=" ">
+              <svg class="modal-form__icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-email-black-18dp-1"></use>
               </svg> 
             </span>
             </div>
-            <div class="modal-form-modal__comments-field">
-              <label for="comment" class="modal-form-label">Комментарий</label> 
+            <div class="modal-form__wrapper">
+              <label for="comment" class="modal-form__label">Комментарий</label> 
               <textarea name="modal-coment" id="comment" placeholder="Введите текст" 
-              class="modal-coment"></textarea>
+              class="modal-form__coment"></textarea>
             </div>
            
-              <div class="modal-form-modal__check-field">
+              <div class="modal-form__check">
               <input type="checkbox" id="check" name="policy" class="visually-hidden checkbox">
-              <label for="check" class="check-label">Соглашаюсь с рассылкой и принимаю
-                  <a href="" class="label-item">Условия договора</a></label>
+              <label for="check" class="modal-form-check__label">Соглашаюсь с рассылкой и принимаю
+                  <a href="" class="modal-form-check-label__item">Условия договора</a></label>
               </div>
              <button class="hero-button" type="submit" data-modal-open>Отправить</button>
           </form>
